--- a/usecases/HR Agent/api_tools/hr_B.yaml
+++ b/usecases/HR Agent/api_tools/hr_B.yaml
@@ -4,7 +4,7 @@ info:
   description: API for retrieving employee details and updating profile information
   version: 1.0.0
 servers:
-- url: https://hr-skills.20eugik541t0.us-south.codeengine.appdomain.cloud
+- url: https://hr-skills-app.21rp3ddlc9ov.us-south.codeengine.appdomain.cloud
   description: Production server
 tags: []
 paths:
